--- a/index.html
+++ b/index.html
@@ -18,8 +18,7 @@
 
 <body>
 
-    <nav class="navbar navbar-dark navbar-expand-sm bg-primary fixed-top">
-
+    <nav class="navbar navbar-dark navbar-expand-sm bg-dark fixed-top">
         <a class="navbar-brand mr-auto" href="#">Ristorante con Fusion</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent">
             <span class="navbar-toggler-icon"></span>
@@ -91,7 +90,7 @@
                     <h5>Links</h5>
                     <ul class="list-unstyled">
                         <li><a href="#">Home</a></li>
-                        <li><a href="#">About</a></li>
+                        <li><a href="./aboutus.html">About</a></li>
                         <li><a href="#">Menu</a></li>
                         <li><a href="#">Contact</a></li>
                     </ul>
