--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">
-                            <span class="fa fa-list fa-lg"></span> Menu
+                            <span class="fa fa-list"></span> Menu
                         </a>
                     </li>
                     <li class="nav-item">
