--- a/aboutus.html
+++ b/aboutus.html
@@ -22,7 +22,7 @@
 
   
     <nav class="navbar navbar-dark navbar-expand-sm bg-dark fixed-top">
-        <a class="navbar-brand mr-auto" href="./index.html">Ristorante con Fusion</a>
+        <a class="navbar-brand mr-auto" href="#"><img src="img/logo.png" height="30" width="41"></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -62,7 +62,8 @@
                     <h1>Ristorante con Fusion</h1>
                     <p>We take inspiration from the World's best cuisines, and create a unique fusion experience. Our lipsmacking creations will tickle your culinary senses!</p>
                 </div>
-                <div class="col-12 col-sm">
+                <div class="col-12 col-sm align-self-center">
+                    <img src="img/logo.png" class="img-fluid">
                 </div>
             </div>
         </div>
