--- a/contactus.html
+++ b/contactus.html
@@ -19,7 +19,7 @@
 <body>
   
     <nav class="navbar navbar-dark navbar-expand-sm bg-dark fixed-top">
-        <a class="navbar-brand mr-auto" href="./index.html">Ristorante con Fusion</a>
+        <a class="navbar-brand mr-auto" href="#"><img src="img/logo.png" height="30" width="41"></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent">
             <span class="navbar-toggler-icon"></span>
         </button>
