--- a/index.html
+++ b/index.html
@@ -60,9 +60,13 @@
                     <h1>Ristorante con Fusion</h1>
                     <p>We take inspiration from the World's best cuisines, and create a unique fusion experience. Our lipsmacking creations will tickle your culinary senses!</p>
                 </div>
-                <div class="col-12 col-sm align-self-center">
+                <div class="col-6 col-sm-3 align-self-center">
                     <img src="img/logo.png" class="img-fluid">
                 </div>
+                <div class="col-6 col-sm-3 align-self-center">
+                    <a class="btn btn-block btn-sm btn-warning" href="#reserveTableForm">Reserve Table</a>
+                </div>  
+                
             </div>
         </div>
     </header>
@@ -91,9 +95,14 @@
                 <h3>This Month's Promotions</h3>
             </div>
             <div class="col col-sm col-md">
-                <h2>Weekend Grand Buffet</h2>
-                <p>Featuring mouthwatering combinations with a choice of five different salads, six enticing appetizers, six main entrees and five choicest desserts. Free flowing bubbly and soft drinks. All for just $19.99 per person </p>
-            </div>
+                <div class="media">
+                    <div class="media-body">
+                        <h2>Weekend Grand Buffet <span class="badge badge-danger"> NEW</span></h2>
+                        <p>Featuring mouthwatering combinations with a choice of five different salads, six enticing appetizers, six main entrees and five choicest desserts. Free flowing bubbly and soft drinks. All for just $19.99 per person </p>
+                    </div>
+                    <img class="d-flex img-thumbnail align-self-center ml-3" src="img/buffet.png">
+                </div>
+                </div>
         </div>
 
         <div class="row row-content align-items-center">
@@ -113,9 +122,9 @@
             </div>
         </div>
 
-        <div class="row row-content align-items-center">
+        <div id="reserveTableForm" class="row row-content align-items-center">
             <div class="col-12 col-md-8 m-auto">
-                <div class="card">
+                <div  class="card">
                     <h3 class="card-header bg-warning text-white">Reserve a Table</h3>
                     <div class="card-body">
                     <form>
